--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>Ім'я: Максим</li>
             <li>По батькові: Юрійович</li>
             <li>Група: 6.1211-2 (2)</li>
+            <li>Мови програмування: Python, JavaScript, C++</li>
         </ul>
     </body>
 </html>
